--- a/css/styles.css
+++ b/css/styles.css
@@ -2,18 +2,27 @@ li span {
 background: gold;
 }
 
+#nav {
+  padding: 10px;
+}
+
+#title{
+  padding: 10px;
+}
+
 #wrap {
   width: 800px;
   margin: 0 auto;
 }
 
 #header {
-padding: 5px 10px;
+  padding: 10px;
 }
 
 #main {
   float: right;
   width: 500px;
+  padding: 5px
 }
 
 #sidebar {
@@ -25,5 +34,6 @@ padding: 5px 10px;
 #footer{
   vertical-align: bottom;
   clear: both;
+  padding: 10px;
   width: 730px;
 }
