This commit will add content to my foundational webpage. There is some small edits to the .css file here and the addition of links to three of my favorite projects I've done in the last 3 months.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
-li span {
-background: gold;
+li span{
+  text-decoration: underline;
+}
+
+a {
+  color: #008B8B;
+}
+
+.image {
+  padding: 5px;
+  margin: 5px;
 }
 
 #nav {
